added improved predictor

--- a/notebook_slq.ipynb
+++ b/notebook_slq.ipynb
@@ -2730,7 +2730,7 @@
    "source": [
     "import re\n",
     "#Search all Gas Stations where street name is A\n",
-    "df_autobahn =df[df['street'] == 'A']\n",
+    "df_autobahn = df[df['street'] == 'A']\n",
     "df_autobahn['house_number'] = df_autobahn['house_number'].map(lambda x: re.sub(r\"\\D\", \"\", x))"
    ]
   },
@@ -2754,7 +2754,7 @@
    "cell_type": "code",
    "execution_count": 183,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -4613,7 +4613,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -5295,14 +5295,14 @@
    "source": [
     "count_brand_locations = pd.read_sql_query(\"\"\"select count('id'), brand from gas_station group by 2 order by 1 DESC;\"\"\"\n",
     "            ,con=engine)\n",
-    "count_brand_locations"
+    "count_brand_locations[]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
